[project]
name = "calculator"
version = "0.0.1"
authors = [
  { name="Nagesh", email="author@example.com" },
]
description = "Testing"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/nagesh2708/test_calc"
Issues = "https://github.com/nagesh2708/test_calc/issues"